--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
-    "next": "14.2.3",
+    "next": "15.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.62",
     "eslint": "8.57.0",
