--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
+    "@types/web-push": "^3.6.4",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.9.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.513.0",
     "next": "15.2.2",
+    "nodemailer": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.4"
+    "tw-animate-css": "^1.3.4",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
